<resources>
    <string name="app_name">TicketToRide</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Welcome to Ticket to Ride</string>
    <string name="login">Login</string>
    <string name="new_player">New Player</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_passowrd">Confirm Password</string>
    <string name="register">Register</string>


    <string name="lobby">LOBBY</string>
    <string name="game_name">Game Name</string>
    <string name="no_player">No. Players</string>
    <string name="join">Join</string>
    <string name="title_activity_lobby">LobbyActivity</string>

    <string name="create_game">Create Game</string>
    <string name="title_activity_game_lobby">GameLobbyActivity</string>
    <string name="start_game">Start Game</string>
    <string name="cancel">Cancel</string>

    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="message">Message...</string>

    <string name="loading">LOADING ... </string>
    <string name="title_activity_loading_fragment">LoadingFragment</string>
    <string name="games_list">Online Games</string>
    <string name="title_activity_create_game">CreateGame</string>
    <string name="number_players">No. of Players</string>

    <string name="new_game">New Game</string>
    <string name="name">Name</string>
    <string name="size">Max 5</string>


    <string name="player_name">P-Username</string>
    <string name="player_score">Score</string>
    <string name="value">5</string>
    <string name="player_num_train">Train Cars Left</string>
    <string name="player_num_destination">Destinations</string>
    <string name="player_num_train_remainng">Cards In Hand</string>

    <string name="cards">Cards</string>
    <string name="select">Select</string>

    <string name="red_train">Red</string>
    <string name="orange_train">Orange</string>
    <string name="yellow_train">Yellow</string>
    <string name="green_train">Green</string>
    <string name="blue_train">Blue</string>
    <string name="purple_train">Purple</string>
    <string name="black_train">Black</string>
    <string name="white_train">White</string>
    <string name="locomotive_train">Locomotive</string>

    <string name="stats_dest_cards_left">Dest Cards Left</string>
    <string name="stats_train_cards_left">Train Cards Left</string>
    <string name="stats">Stats</string>
    <string name="title_activity_end_game">EndGameActivity</string>

    <string name="win">You Win!!!</string>
    <string name="loose">You Lost</string>
</resources>
