<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tickettorideguy_background"
    tools:context="view.LoginRegisterFragment"
    android:id="@+id/fragment_login_register"
    >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:orientation="horizontal"
            >
<!--First Column-->
            <LinearLayout
                android:layout_width="240px"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_columnWeight="1"

                >

            </LinearLayout>
<!--Second Columns            -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_columnWeight="1"
                >

                <ImageView
                    android:paddingTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="30mm"
                    android:layout_height="10mm"
                    android:src="@drawable/sign_in"/>

                <EditText
                    android:text="Mike"
                    android:paddingTop="20dp"
                    android:id="@+id/username_login_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textAlignment="center"
                    android:textColor="#bdbfbf"
                    android:textColorHint="#bdbfbf"/>

                <EditText
                    android:text="TheDestroyer"
                    android:paddingTop="20dp"
                    android:id="@+id/password_login_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textAlignment="center"
                    android:textColor="#bdbfbf"
                    android:textColorHint="#bdbfbf"
                    android:inputType="textPassword"/>


                <Button
                    android:paddingTop="20dp"
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/sign_in" />
                <EditText
                    android:text="10.0.2.2"
                    android:paddingTop="20dp"
                    android:id="@+id/ip_address_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="10.0.2.2"
                    android:textAlignment="center"
                    android:textColor="#bdbfbf"
                    android:textColorHint="#bdbfbf"
                    android:textSize="10dp"/>
                <EditText
                    android:text="8080"
                    android:paddingTop="20dp"
                    android:id="@+id/port_address_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="8080"
                    android:textAlignment="center"
                    android:textColor="#bdbfbf"
                    android:textColorHint="#bdbfbf"
                    android:textSize="10dp"/>

            </LinearLayout>



<!--Third Columns-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_columnWeight="1"
                >

                <ImageView
                    android:paddingTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="30mm"
                    android:layout_height="10mm"
                    android:src="@drawable/new_user"/>

                <EditText
                    android:paddingTop="20dp"
                    android:id="@+id/username_register_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textAlignment="center"
                    android:textColor="#bdbfbf"
                    android:textColorHint="#bdbfbf"/>

                <EditText
                    android:paddingTop="20dp"
                    android:id="@+id/password_register_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textAlignment="center"
                    android:textColor="#bdbfbf"
                    android:textColorHint="#bdbfbf"
                    android:inputType="textPassword"/>
                <EditText
                    android:paddingTop="20dp"
                    android:id="@+id/password_confirm_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_passowrd"
                    android:textAlignment="center"
                    android:textColorHint="#bdbfbf"
                    android:textColor="#bdbfbf"
                    android:inputType="textPassword"/>


                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:background="@drawable/mybutton"
                    android:text="@string/register" />

            </LinearLayout>


        </GridLayout>









    </LinearLayout>

















</FrameLayout>
